# Waystone-Ridge-WorkspaceManager

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest  app.md  app.rc  build.bat  build.rs  config.example.toml
.claude/: settings.json
infos/: headlinesexamples.html
src/: InfoDialog.md  cli.rs  config.rs  hook.rs  hotkeys.rs  info_dialog.html  info_dialog.rs  logging.rs  main.rs  monitors.rs  overlay.rs  quick_input.html  quick_input.rs  respite.rs  windows.rs  workspace.rs
