[package]
name = "Waystone-Ridge-WorkspaceManager"
version = "0.4.1"
edition = "2021"
description = "Workspace Manager für Windows — verwaltet benannte Workspaces mit Fenster-Sichtbarkeit und Hotkeys"

[[bin]]
name = "Waystone-Ridge"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

tray-icon = "0.14"

# Das Programm ist Windows-only.
[target.'cfg(not(windows))'.dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
